src/test/deca/codegen/valid/created/testClass/castFloatToInt.deca
{
    float x = 3.14f;
    int y = (int)(x);
    println(y);
}