src/test/deca/codegen/invalid/created/testOpArith/Dereferencementnull.deca
// Description:
//    dereferencementnull
//
// Resultats:
// 


class alpha {
    int entier;
}

class sigma {
    float s = 3.15;

    alpha objectoo;
}

{
    alpha obj ;
    print(obj.entier+1);
}    